--- a/.github/workflows/docker-develop.yml
+++ b/.github/workflows/docker-develop.yml
@@ -25,7 +25,6 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Log in to the Container registry
-        working-directory: ./base
         uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
         with:
           registry: ${{ env.REGISTRY }}
@@ -34,17 +33,15 @@ jobs:
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
-        working-directory: ./base
         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
       - name: Build and push Docker image
         id: push
-        working-directory: ./base
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
         with:
-          context: .
+          context: ./base
           push: true
           tags: experimental,${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
