--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -1,5 +1,5 @@
 #
-name: Create and publish a experimental image
+name: Create and publish a work in progress image
 
 on:
   workflow_dispatch:
@@ -7,7 +7,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: debezium-alpine-base
 
 jobs:
   build-and-push-image:
