--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -16,6 +16,7 @@ jobs:
 
     build-image-connect-base:
       uses: ZeroGachis/.github/.github/workflows/build-image.yml@v4
+      needs: build-image-base
       with:
         image_name: debezium-alpine-connect-base
         dockerfile_context: connect-base/
