--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,8 @@ jobs:
     uses: ZeroGachis/.github/.github/workflows/gh-release-please.yml@v4
     with:
         major_and_minor_tags: false
-  docker-build-push-build:
+
+  docker-build-push-build-base:
     needs: github-release
     if: ${{ needs.github-release.outputs.release_created == 'false' }}
     uses: ZeroGachis/.github/.github/workflows/build-push-image-to-dockerhub.yml@v4
@@ -19,13 +20,32 @@ jobs:
         dockerfile_context: base/
         dockerhub_repository_name: debezium-alpine-base
     secrets: inherit
-    
-  docker-build-push-release:
+
+  docker-build-push-release-base:
     needs: github-release
     if: ${{ needs.github-release.outputs.release_created == 'true' }}
     uses: ZeroGachis/.github/.github/workflows/build-push-image-to-dockerhub.yml@v4
     with:
       dockerfile_context: base/
       dockerhub_repository_name: debezium-alpine-base
+      tag: ${{ needs.github-release.outputs.release_number }}
+    secrets: inherit
+
+  docker-build-push-build-connect-base:
+    needs: github-release
+    if: ${{ needs.github-release.outputs.release_created == 'false' }}
+    uses: ZeroGachis/.github/.github/workflows/build-push-image-to-dockerhub.yml@v4
+    with:
+        dockerfile_context: connect-base/
+        dockerhub_repository_name: debezium-alpine-connect-base
+    secrets: inherit
+
+  docker-build-push-release-connect-base:
+    needs: github-release
+    if: ${{ needs.github-release.outputs.release_created == 'true' }}
+    uses: ZeroGachis/.github/.github/workflows/build-push-image-to-dockerhub.yml@v4
+    with:
+      dockerfile_context: connect-base/
+      dockerhub_repository_name: debezium-alpine-connect-base
       tag: ${{ needs.github-release.outputs.release_number }}
     secrets: inherit
