--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,3 +52,22 @@ jobs:
       dockerhub_repository_name: debezium-alpine-connect-base
       tag: $DEBEZIUM_RELEASE
     secrets: inherit
+
+  postgresql-slim-build:
+    needs: github-release
+    if: ${{ needs.github-release.outputs.release_created == 'false' }}
+    uses: ZeroGachis/.github/.github/workflows/build-push-image-to-dockerhub.yml@v4
+    with:
+        dockerfile_context: postgresql-slim/
+        dockerhub_repository_name: debezium-postgresql-slim
+    secrets: inherit
+
+  postgresql-slim-release:
+    needs: github-release
+    if: ${{ needs.github-release.outputs.release_created == 'true' }}
+    uses: ZeroGachis/.github/.github/workflows/build-push-image-to-dockerhub.yml@v4
+    with:
+      dockerfile_context: postgresql-slim/
+      dockerhub_repository_name: debezium-postgresql-slim
+      tag: $DEBEZIUM_RELEASE
+    secrets: inherit
