--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,23 +22,52 @@ jobs:
     with:
         dockerfile_context: base/
         dockerhub_repository_name: debezium-alpine-base
-        tag: ${{ vars.DEBEZIUM_RELEASE }}
+    secrets: inherit
+
+  base-release:
+    needs: github-release
+    if: ${{ needs.github-release.outputs.release_created == 'true' }}
+    uses: ZeroGachis/.github/.github/workflows/build-push-image-to-dockerhub.yml@v4
+    with:
+      dockerfile_context: base/
+      dockerhub_repository_name: debezium-alpine-base
+      tag: ${{ vars.DEBEZIUM_RELEASE }}
     secrets: inherit
 
   connect-base-build:
-    needs: base-build
+    needs: github-release
+    if: ${{ needs.github-release.outputs.release_created == 'false' }}
     uses: ZeroGachis/.github/.github/workflows/build-push-image-to-dockerhub.yml@v4
     with:
         dockerfile_context: connect-base/
         dockerhub_repository_name: debezium-alpine-connect-base
-        tag: ${{ vars.DEBEZIUM_RELEASE }}
+    secrets: inherit
+
+  connect-base-release:
+    needs: github-release
+    if: ${{ needs.github-release.outputs.release_created == 'true' }}
+    uses: ZeroGachis/.github/.github/workflows/build-push-image-to-dockerhub.yml@v4
+    with:
+      dockerfile_context: connect-base/
+      dockerhub_repository_name: debezium-alpine-connect-base
+      tag: ${{ vars.DEBEZIUM_RELEASE }}
     secrets: inherit
 
   postgresql-slim-build:
-    needs: connect-base-build
+    needs: github-release
+    if: ${{ needs.github-release.outputs.release_created == 'false' }}
     uses: ZeroGachis/.github/.github/workflows/build-push-image-to-dockerhub.yml@v4
     with:
         dockerfile_context: postgresql-slim/
         dockerhub_repository_name: debezium-postgresql-slim
-        tag: ${{ vars.DEBEZIUM_RELEASE }}
+    secrets: inherit
+
+  postgresql-slim-release:
+    needs: github-release
+    if: ${{ needs.github-release.outputs.release_created == 'true' }}
+    uses: ZeroGachis/.github/.github/workflows/build-push-image-to-dockerhub.yml@v4
+    with:
+      dockerfile_context: postgresql-slim/
+      dockerhub_repository_name: debezium-postgresql-slim
+      tag: ${{ vars.DEBEZIUM_RELEASE }}
     secrets: inherit
