--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,11 +26,11 @@ jobs:
 
   connect-base-build:
     needs: github-release
-    if: ${{ needs.github-release.outputs.release_created == 'false' }}
     uses: ZeroGachis/.github/.github/workflows/build-push-image-to-dockerhub.yml@v4
     with:
         dockerfile_context: connect-base/
         dockerhub_repository_name: debezium-alpine-connect-base
+        tag: latest
     secrets: inherit
 
   connect-base-release:
