ci: add snowflake

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,16 +21,25 @@ jobs:
     with:
         dockerfile_context: base/
         dockerhub_repository_name: debezium-alpine-base
-        tag: ${{ vars.DEBEZIUM_RELEASE }}
+    secrets: inherit
+
+  base-release:
+    needs: github-release
+    if: ${{ needs.github-release.outputs.release_created == 'true' }}
+    uses: ZeroGachis/.github/.github/workflows/build-push-image-to-dockerhub.yml@v4
+    with:
+      dockerfile_context: base/
+      dockerhub_repository_name: debezium-alpine-base
+      tag: ${{ vars.DEBEZIUM_RELEASE }}
     secrets: inherit
 
   connect-base-build:
     needs: github-release
+    if: ${{ needs.github-release.outputs.release_created == 'false' }}
     uses: ZeroGachis/.github/.github/workflows/build-push-image-to-dockerhub.yml@v4
     with:
         dockerfile_context: connect-base/
         dockerhub_repository_name: debezium-alpine-connect-base
-        tag: latest
     secrets: inherit
 
   connect-base-release:
@@ -59,5 +68,24 @@ jobs:
     with:
       dockerfile_context: postgresql-slim/
       dockerhub_repository_name: debezium-postgresql-slim
+      tag: ${{ vars.DEBEZIUM_RELEASE }}
+    secrets: inherit
+
+  snowflake-slim-build:
+    needs: github-release
+    if: ${{ needs.github-release.outputs.release_created == 'false' }}
+    uses: ZeroGachis/.github/.github/workflows/build-push-image-to-dockerhub.yml@v4
+    with:
+        dockerfile_context: snowflake-slim/
+        dockerhub_repository_name: debezium-snowflake-slim
+    secrets: inherit
+
+  snowflake-slim-release:
+    needs: github-release
+    if: ${{ needs.github-release.outputs.release_created == 'true' }}
+    uses: ZeroGachis/.github/.github/workflows/build-push-image-to-dockerhub.yml@v4
+    with:
+      dockerfile_context: snowflake-slim/
+      dockerhub_repository_name: debezium-snowflake-slim
       tag: ${{ vars.DEBEZIUM_RELEASE }}
     secrets: inherit
