--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,40 +52,27 @@ jobs:
       tag: ${{ vars.DEBEZIUM_RELEASE }}
     secrets: inherit
 
-  postgresql-slim-build:
+  final-build:
     needs: github-release
+    strategy:
+      matrix:
+        plugin: [postgresql-slim, snowflake-slim]
     if: ${{ needs.github-release.outputs.release_created == 'false' }}
     uses: ZeroGachis/.github/.github/workflows/build-push-image-to-dockerhub.yml@v4
     with:
-        dockerfile_context: postgresql-slim/
-        dockerhub_repository_name: debezium-postgresql-slim
+        dockerfile_context: ${{ matrix.plugin }}/
+        dockerhub_repository_name: ${{ matrix.plugin }}
     secrets: inherit
 
-  postgresql-slim-release:
+  final-release:
     needs: github-release
+    strategy:
+      matrix:
+        plugin: [postgresql-slim, snowflake-slim]
     if: ${{ needs.github-release.outputs.release_created == 'true' }}
     uses: ZeroGachis/.github/.github/workflows/build-push-image-to-dockerhub.yml@v4
     with:
-      dockerfile_context: postgresql-slim/
-      dockerhub_repository_name: debezium-postgresql-slim
-      tag: ${{ vars.DEBEZIUM_RELEASE }}
-    secrets: inherit
-
-  snowflake-slim-build:
-    needs: github-release
-    if: ${{ needs.github-release.outputs.release_created == 'false' }}
-    uses: ZeroGachis/.github/.github/workflows/build-push-image-to-dockerhub.yml@v4
-    with:
-        dockerfile_context: snowflake-slim/
-        dockerhub_repository_name: debezium-snowflake-slim
-    secrets: inherit
-
-  snowflake-slim-release:
-    needs: github-release
-    if: ${{ needs.github-release.outputs.release_created == 'true' }}
-    uses: ZeroGachis/.github/.github/workflows/build-push-image-to-dockerhub.yml@v4
-    with:
-      dockerfile_context: snowflake-slim/
-      dockerhub_repository_name: debezium-snowflake-slim
+      dockerfile_context: ${{ matrix.plugin }}/
+      dockerhub_repository_name: debezium-${{ matrix.plugin }}
       tag: ${{ vars.DEBEZIUM_RELEASE }}
     secrets: inherit
