--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,7 @@ on:
       - main
 
 env:
-  DEBEZIUM_RELEASE: 3.1.0
+  DEBEZIUM_RELEASE: 3.1.0-Alpha2
 
 jobs:
   github-release:
@@ -17,6 +17,7 @@ jobs:
 
   base-build:
     needs: github-release
+    if: ${{ needs.github-release.outputs.release_created == 'false' }}
     uses: ZeroGachis/.github/.github/workflows/build-push-image-to-dockerhub.yml@v4
     with:
         dockerfile_context: base/
