--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
     with:
       dockerfile_context: base/
       dockerhub_repository_name: debezium-alpine-base
-      tag: "$DEBEZIUM_RELEASE"
+      tag: 3.1.0-Alpha2
     secrets: inherit
 
   connect-base-build:
@@ -50,7 +50,7 @@ jobs:
     with:
       dockerfile_context: connect-base/
       dockerhub_repository_name: debezium-alpine-connect-base
-      tag: $DEBEZIUM_RELEASE
+      tag: 3.1.0-Alpha2
     secrets: inherit
 
   final-build:
