--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,9 +6,6 @@ on:
     branches:
       - main
 
-env:
-  DEBEZIUM_RELEASE: 3.1.0-Alpha2
-
 jobs:
   github-release:
     uses: ZeroGachis/.github/.github/workflows/gh-release-please.yml@v4
@@ -31,7 +28,9 @@ jobs:
     with:
       dockerfile_context: base/
       dockerhub_repository_name: debezium-alpine-base
-      tag: 3.1.0-Alpha2
+      tag: |
+        3.1.0-Alpha2
+        latest
     secrets: inherit
 
   connect-base-build:
@@ -50,7 +49,9 @@ jobs:
     with:
       dockerfile_context: connect-base/
       dockerhub_repository_name: debezium-alpine-connect-base
-      tag: 3.1.0-Alpha2
+      tag: |
+        3.1.0-Alpha2
+        latest
     secrets: inherit
 
   final-build:
@@ -75,5 +76,5 @@ jobs:
     with:
       dockerfile_context: ${{ matrix.plugin }}/
       dockerhub_repository_name: debezium-${{ matrix.plugin }}
-      tag: $DEBEZIUM_RELEASE
+      tag: 3.1.0-Alpha2
     secrets: inherit
