ci: add missing latest tag

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -76,5 +76,7 @@ jobs:
     with:
       dockerfile_context: ${{ matrix.plugin }}/
       dockerhub_repository_name: debezium-${{ matrix.plugin }}
-      tag: 3.1.0-Alpha2
+      tag: |
+        3.1.0-Alpha2
+        latest
     secrets: inherit
