--- a/mariadb-slim/Dockerfile
+++ b/mariadb-slim/Dockerfile
@@ -7,4 +7,4 @@ ENV DEBEZIUM_VERSION="3.1.0.Alpha2" \
     MAVEN_REPOS_ADDITIONAL="" \
     MARIADB_MD5=707058d675788b5b2f014064288921c8
 
-RUN docker-maven-download debezium postgres "$DEBEZIUM_VERSION" "$MARIADB_MD5"
+RUN docker-maven-download debezium mariadb "$DEBEZIUM_VERSION" "$MARIADB_MD5"
