--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,42 +16,82 @@ jobs:
     needs: github-release
     if: ${{ needs.github-release.outputs.release_created == 'false' }}
     uses: ZeroGachis/.github/.github/workflows/build-push-image-to-dockerhub.yml@v4
+    permissions:
+      contents: read
+      security-events: write
+      actions: read
+      id-token: write
+      packages: write
+      pull-requests: write
+      checks: write
     with:
-        dockerfile_context: base/
-        dockerhub_repository_name: debezium-alpine-base
+      dockerfile_context: base/
+      dockerhub_repository_name: debezium-alpine-base
+      security_scan_output_format: sarif
+      trivy_severity: 'CRITICAL,HIGH,MEDIUM,LOW'
     secrets: inherit
 
   base-release:
     needs: github-release
     if: ${{ needs.github-release.outputs.release_created == 'true' }}
     uses: ZeroGachis/.github/.github/workflows/build-push-image-to-dockerhub.yml@v4
+    permissions:
+      contents: read
+      security-events: write
+      actions: read
+      id-token: write
+      packages: write
+      pull-requests: write
+      checks: write
     with:
       dockerfile_context: base/
       dockerhub_repository_name: debezium-alpine-base
       tag: |
         3.1.0-Alpha2
         latest
+      security_scan_output_format: sarif
+      trivy_severity: 'CRITICAL,HIGH,MEDIUM,LOW'
     secrets: inherit
 
   connect-base-build:
     needs: [github-release, base-build]
     if: ${{ needs.github-release.outputs.release_created == 'false' }}
     uses: ZeroGachis/.github/.github/workflows/build-push-image-to-dockerhub.yml@v4
+    permissions:
+      contents: read
+      security-events: write
+      actions: read
+      id-token: write
+      packages: write
+      pull-requests: write
+      checks: write
     with:
-        dockerfile_context: connect-base/
-        dockerhub_repository_name: debezium-alpine-connect-base
+      dockerfile_context: connect-base/
+      dockerhub_repository_name: debezium-alpine-connect-base
+      security_scan_output_format: sarif
+      trivy_severity: 'CRITICAL,HIGH,MEDIUM,LOW'
     secrets: inherit
 
   connect-base-release:
     needs: [github-release, base-release]
     if: ${{ needs.github-release.outputs.release_created == 'true' }}
     uses: ZeroGachis/.github/.github/workflows/build-push-image-to-dockerhub.yml@v4
+    permissions:
+      contents: read
+      security-events: write
+      actions: read
+      id-token: write
+      packages: write
+      pull-requests: write
+      checks: write
     with:
       dockerfile_context: connect-base/
       dockerhub_repository_name: debezium-alpine-connect-base
       tag: |
         3.1.0-Alpha2
         latest
+      security_scan_output_format: sarif
+      trivy_severity: 'CRITICAL,HIGH,MEDIUM,LOW'
     secrets: inherit
 
   final-build:
@@ -61,9 +101,19 @@ jobs:
         plugin: [postgresql-slim, snowflake-slim, mariadb-slim, jdbc-slim]
     if: ${{ needs.github-release.outputs.release_created == 'false' }}
     uses: ZeroGachis/.github/.github/workflows/build-push-image-to-dockerhub.yml@v4
+    permissions:
+      contents: read
+      security-events: write
+      actions: read
+      id-token: write
+      packages: write
+      pull-requests: write
+      checks: write
     with:
-        dockerfile_context: ${{ matrix.plugin }}/
-        dockerhub_repository_name: debezium-${{ matrix.plugin }}
+      dockerfile_context: ${{ matrix.plugin }}/
+      dockerhub_repository_name: debezium-${{ matrix.plugin }}
+      security_scan_output_format: sarif
+      trivy_severity: 'CRITICAL,HIGH,MEDIUM,LOW'
     secrets: inherit
 
   final-release:
@@ -73,10 +123,20 @@ jobs:
         plugin: [postgresql-slim, snowflake-slim, mariadb-slim, jdbc-slim]
     if: ${{ needs.github-release.outputs.release_created == 'true' }}
     uses: ZeroGachis/.github/.github/workflows/build-push-image-to-dockerhub.yml@v4
+    permissions:
+      contents: read
+      security-events: write
+      actions: read
+      id-token: write
+      packages: write
+      pull-requests: write
+      checks: write
     with:
       dockerfile_context: ${{ matrix.plugin }}/
       dockerhub_repository_name: debezium-${{ matrix.plugin }}
       tag: |
         3.1.0-Alpha2
         latest
+      security_scan_output_format: sarif
+      trivy_severity: 'CRITICAL,HIGH,MEDIUM,LOW'
     secrets: inherit
