chore: upgrade to 3.1.1-Final

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,7 +48,7 @@ jobs:
       dockerfile_context: base/
       dockerhub_repository_name: debezium-alpine-base
       tag: |
-        3.1.0-Alpha2
+        3.1.1-Final
         latest
     secrets: inherit
 
@@ -128,6 +128,6 @@ jobs:
       dockerfile_context: ${{ matrix.plugin }}/
       dockerhub_repository_name: debezium-${{ matrix.plugin }}
       tag: |
-        3.1.0-Alpha2
+        3.1.1-Final
         latest
     secrets: inherit
