chore: upgrade connector version

--- a/mariadb-slim/Dockerfile
+++ b/mariadb-slim/Dockerfile
@@ -2,7 +2,7 @@ FROM smartwayai/debezium-alpine-connect-base:3.1.1-Final
 
 LABEL maintainer="Smartway"
 
-ENV DEBEZIUM_VERSION="3.1.0.Alpha2" \
+ENV DEBEZIUM_VERSION="3.1.1.Final" \
     MAVEN_REPO_CENTRAL="" \
     MAVEN_REPOS_ADDITIONAL="" \
     MARIADB_MD5=707058d675788b5b2f014064288921c8
