--- a/postgresql-slim/Dockerfile
+++ b/postgresql-slim/Dockerfile
@@ -2,7 +2,7 @@ FROM smartwayai/debezium-alpine-connect-base:3.1.1-Final
 
 LABEL maintainer="Smartway"
 
-ENV DEBEZIUM_VERSION="3.1.0.Alpha2" \
+ENV DEBEZIUM_VERSION="3.1.1.Final" \
     MAVEN_REPO_CENTRAL="" \
     MAVEN_REPOS_ADDITIONAL="" \
     POSTGRES_MD5=bb9cb8bcd345eb9c54ed5aa6b008b9a4
