--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -85,7 +85,7 @@ jobs:
       dockerfile_context: connect-base/
       dockerhub_repository_name: debezium-alpine-connect-base
       tag: |
-        3.1.0-Alpha2
+        3.1.1-Final
         latest
     secrets: inherit
 
