--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -1,28 +1,28 @@
-FROM library/alpine@sha256:a8560b36e8b8210634f77d9f7f9efd7ffa463e380b75e2e74aff4511df3ef88c
+FROM library/alpine:3.22@sha256:4bcff63911fcb4448bd4fdacec207030997caf25e9bea4045fa6c8c44de311d1
 
 LABEL maintainer="Smartway"
 
 USER root
 
-# renovate: datasource=repology depName=alpine_3_21/gzip versioning=loose
-ENV GZIP_VERSION=1.13-r0
+# renovate: datasource=repology depName=alpine_3_22/gzip versioning=loose
+ENV GZIP_VERSION=1.14-r1
 
-# renovate: datasource=repology depName=alpine_3_21/curl versioning=loose
-ENV CURL_VERSION=8.12.1-r1
+# renovate: datasource=repology depName=alpine_3_22/curl versioning=loose
+ENV CURL_VERSION=8.14.1-r1
 
-# renovate: datasource=repology depName=alpine_3_21/zip versioning=loose
+# renovate: datasource=repology depName=alpine_3_22/zip versioning=loose
 ENV ZIP_VERSION=3.0-r13
 
-# renovate: datasource=repology depName=alpine_3_21/openjdk21-jre-headless versioning=loose
+# renovate: datasource=repology depName=alpine_3_22/openjdk21-jre-headless versioning=loose
 ENV OPENJDK_VERSION=21.0.8_p9-r0
 
-# renovate: datasource=repology depName=alpine_3_21/bash versioning=loose
+# renovate: datasource=repology depName=alpine_3_22/bash versioning=loose
 ENV BASH_VERSION=5.2.37-r0
 
-# renovate: datasource=repology depName=alpine_3_21/libaio versioning=loose
+# renovate: datasource=repology depName=alpine_3_22/libaio versioning=loose
 ENV LIBAIO_VERSION=0.3.113-r2
 
-# renovate: datasource=repology depName=alpine_3_21/libaio versioning=loose
+# renovate: datasource=repology depName=alpine_3_22/libaio versioning=loose
 ENV FINDUTILS_VERSION=4.10.0-r0
 
 
