feat: centralize DEBEZIUM_VERSION in base Dockerfile
- Add ENV DEBEZIUM_VERSION and LABEL debezium.version to base image
- Remove redundant DEBEZIUM_VERSION from child Dockerfiles (postgresql-slim, mariadb-slim, jdbc-slim)
  since it is now inherited from the base image

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -1,6 +1,9 @@
 FROM library/alpine:3.23@sha256:25109184c71bdad752c8312a8623239686a9a2071e8825f20acb8f2198c3f659
 
+ENV DEBEZIUM_VERSION=3.2.2.Final
+
 LABEL maintainer="Smartway"
+LABEL debezium.version=$DEBEZIUM_VERSION
 
 USER root
 
