--- a/jdbc-slim/Dockerfile
+++ b/jdbc-slim/Dockerfile
@@ -2,8 +2,7 @@ FROM smartwayai/debezium-alpine-connect-base:3.2.2.Final
 
 LABEL maintainer="Smartway"
 
-ENV DEBEZIUM_VERSION="3.2.2.Final" \
-    MAVEN_REPO_CENTRAL="" \
+ENV MAVEN_REPO_CENTRAL="" \
     MAVEN_REPOS_ADDITIONAL="" \
     JDBC_MD5=ad53af348072df89802f1c5ef144d2c1
 
