--- a/mariadb-slim/Dockerfile
+++ b/mariadb-slim/Dockerfile
@@ -2,8 +2,7 @@ FROM smartwayai/debezium-alpine-connect-base:3.2.2.Final
 
 LABEL maintainer="Smartway"
 
-ENV DEBEZIUM_VERSION="3.2.2.Final" \
-    MAVEN_REPO_CENTRAL="" \
+ENV MAVEN_REPO_CENTRAL="" \
     MAVEN_REPOS_ADDITIONAL="" \
     MARIADB_MD5=e4436bd81d19a09e3531ea460aa78348
 
