--- a/postgresql-slim/Dockerfile
+++ b/postgresql-slim/Dockerfile
@@ -2,8 +2,7 @@ FROM smartwayai/debezium-alpine-connect-base:3.2.2.Final
 
 LABEL maintainer="Smartway"
 
-ENV DEBEZIUM_VERSION="3.2.2.Final" \
-    MAVEN_REPO_CENTRAL="" \
+ENV MAVEN_REPO_CENTRAL="" \
     MAVEN_REPOS_ADDITIONAL="" \
     POSTGRES_MD5=7aab67711a68e69e27265aa36ec82f89
 
